--- a/body.tex
+++ b/body.tex
@@ -358,21 +358,21 @@ Each \gls{epic} loaded into the plan must have this minimum set of fields filled
 \item The \texttt{Component} field set to the appropriate Department;
 \item The \texttt{Story Points} field set to a (non-zero) estimate of the effort required to complete the \gls{epic} in terms of \glspl{SP} (see \S\ref{sec:effort}).
 \item The \texttt{RO Milestone ID} field set to the appropriate L3 or L2 milestone that the epic will contribute to achieving (or achieve in its totality).
-  The exact \texttt{RO Milestone ID}text can be found in the Milestone issue or Smartsheet.
-\item The \texttt{Due Date} field set to the appropriate date, which does not exceed the due date of the Milestone it is labeled to achieve.
+  The exact \texttt{RO Milestone ID} can be found in the milestone issue or Smartsheet.
+\item The \texttt{Due Date} field set to the appropriate date, which does not exceed the due date of the milestone it is labeled to achieve.
 \item The \texttt{label} field is set to identify the fiscal year during which the work will be done. Examples are FY22 or FY23.
 
 \end{itemize}
 The fields above are required to have values entered because they define the connection to Smartsheet where effort-tracking for the full project is done. Other fields in the epic can also be filled in as needed.
 
-Be aware that: (Amanda: I don't think all of the following bullets are true or necessary in the Operations non-EVMS era.  Should clarify with Cathy and Wil.)
+Be aware that:
 
 \begin{itemize}
 \item An \gls{epic} may only be assigned to a single \gls{cycle}.
   It is not possible to define an \gls{epic} that crosses the \gls{cycle} boundary (see \S\ref{sec:cycle-close} for the procedure when an \gls{epic} is not complete by the end of the \gls{cycle}).
 \item Indeed, where possible management activities \emph{should} be scheduled as \glspl{epic} with concrete deliverables in this \gls{element} rather than being handled as \gls{LOE}.
 \item The \gls{epic} should be at an appropriate level of granularity.
-  While short \glspl{epic} (a few \glspl{SP}) may be suitable for some activities, in general \glspl{epic} will describe a few months of developer-time.
+  While short \glspl{epic} (a few \glspl{SP}) may be suitable for some activities, in general \glspl{epic} will describe a few months of time.
   \Glspl{epic} allocated multiple hundreds of \gls{story} points are likely too broad to be accurately estimated.
 \end{itemize}
 
@@ -411,9 +411,10 @@ Bucket \glspl{epic} have some similarities with \gls{LOE} work.
 As such, we acknowledge that they are necessary, but seek to minimize the fraction of our resources assigned to them.
 If more than a relatively small fraction of the work for a \gls{cycle} is assigned to bucket \glspl{epic}, please consider whether this is really necessary and appropriate.
 
-Be aware that even bucket \glspl{epic} must be assigned to a specific \emph{leaf} \gls{element} of the \gls{WBS}.
-That is, it is not in general possible to define an \gls{epic} which handles bug reports or emergent feature requests across the whole of the codebase unless a specific \gls{WBS} leaf \gls{element} is devoted to maintenance activities of this type.
-Instead, it may be necessary to define a different bucket \gls{epic} for each leaf of the \gls{WBS} tree.
+% I think this is a tie to the Construction EVMS and is not needed here.
+% Be aware that even bucket \glspl{epic} must be assigned to a specific \emph{leaf} \gls{element} of the \gls{WBS}.
+% That is, it is not in general possible to define an \gls{epic} which handles bug reports or emergent feature requests across the whole of the codebase unless a specific \gls{WBS} leaf \gls{element} is devoted to maintenance activities of this type.
+% Instead, it may be necessary to define a different bucket \gls{epic} for each leaf of the \gls{WBS} tree.
 
 
 \subsection{Closing the Cycle} \label{sec:cycle-close}
@@ -427,6 +428,7 @@ It is \emph{not} appropriate to close an in-progress \gls{epic} with a concrete 
 Obviously, this will impact the labor available for other activities in the next \gls{cycle}.
 (This does not apply to bucket \glspl{epic} (\S\ref{sec:bucket}), which are, by their nature, \gls{timebox}ed within the \gls{cycle}).
 
+Be aware that if a planned epic is not closed it may impact the completion of the milestone it contributes to.  Epics related to milesteones must be completed in order for the milestone to also be completed.
 
 \section{Execution} \label{sec:execution}
 
