--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -37,7 +37,8 @@ This document describes guidelines for the management of effort in Vera C. Rubin
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.
 \setDocChangeRecord{%
-  \addtohist{1}{YYYY-MM-DD}{Unreleased.}{William O'Mullane}
+\addtohist{1}{2021-11-05}{Unreleased.}{William O'Mullane}
+  % \addtohist{1}{YYYY-MM-DD}{Initial Release.}{William O'Mullane}
 }
 
 
