--- a/body.tex
+++ b/body.tex
@@ -298,7 +298,7 @@ During the year, it is sometimes necessary to create new milestones (primarily a
 
 The following fields must be filled out when defining a new milestone:
 \begin{itemize}
-\item The \texttt{Milestone Level}, ``1,'' ``2,'' or ``3;''
+\item The \texttt{Milestone Level}, ``1,'' ``2,'' or ``3.''
 \item The \texttt{RO Milestone ID}.
   This is a string like ``L2-DI-0003'' which indicates the level of the milestone, the department (for level 2 milestones) or team (for level 3 milestones) that owns it, and an ID number that serves to make the ID unique but which otherwise carries no meaning.
   The list of two-character department and team string identifiers can be found in the Appendix (``DI'' in the example stands for ``Directorate'').
