--- a/body.tex
+++ b/body.tex
@@ -270,6 +270,7 @@ It should then be assigned to the appropriate \glspl{cycle}.
 
 Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points on linked issues in \gls{JIRA} epics and rolling up the total progress.
 To ensure success, \gls{JIRA} epics must be completely detailed out prior to a full 6-month cycle and total effort should be estimated out for an entire fiscal year of effort, as detailed below.
+All milestones should appear in \gls{JIRA} with a milestone issue type as the source of truth. 
 
 \subsection{Planning Research Work}
 \label{sec:long-term-research}
