--- a/body.tex
+++ b/body.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 
 This document provides a guide to the \VRO\ approach to work management and annual planning.
-See the operations proposal \citeds{RDO-018} for a description of the full scope and high level goals of the program.
+See the operations proposal RDO-018 for a description of the full scope and high level goals of the program.
 There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on an annual basis and effort towards that schedule of activities is tracked through an agile process.
 
 The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
