--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -11,13 +11,13 @@
 \input{aglossary.tex}
 \makeglossaries
 
-\title{Work Management Systems for Rubin Operations}
+\title{Rubin Operations Work Management and Budget Planning}
 
 % Optional subtitle
 % \setDocSubtitle{A subtitle}
 
 \author{%
-William O'Mullane, Amanda Bauer, Robert Blum, Phil Marshall, Cathy Petry
+Phil Marshall, William O'Mullane, Amanda Bauer, Robert Blum, Cathy Petry, Ranpal Gill
 }
 
 \setDocRef{RTN-005}
@@ -29,7 +29,10 @@ William O'Mullane, Amanda Bauer, Robert Blum, Phil Marshall, Cathy Petry
 % \setDocCurator{The Curator of this Document}
 
 \setDocAbstract{%
-This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity. This document describes how effort towards an annually-planned schedule is tracked. 
+This document describes the budget and work planning process, and provided guidelines for the management of effort, in Vera C. Rubin Observatory Operations.
+It lays out the annual cycle of milestone setting, development of departmental budget guidance, budget ``scrubbing,'' and work planning, and introduces (in an appendix) the suite of Rubin Operations Planning Tools.
+It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity.
+This document describes how effort towards an annually-planned schedule is tracked.
 }
 
 % Change history defined here.
@@ -37,8 +40,8 @@ This document describes guidelines for the management of effort in Vera C. Rubin
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.
 \setDocChangeRecord{%
-\addtohist{1}{2021-11-05}{Unreleased.}{William O'Mullane}
-  % \addtohist{1}{YYYY-MM-DD}{Initial Release.}{William O'Mullane}
+\addtohist{1}{2021-11-05}{Initial version.}{William O'Mullane}
+\addtohist{1}{2023-01-13}{Extension to include budget planning.}{Phil Marshall}
 }
 
 
