Section separators plus minor clean-up

--- a/body.tex
+++ b/body.tex
@@ -1,24 +1,25 @@
+% ======================================================================
 \section{Introduction}
 
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal RDO-018 for a description of the full scope and high level goals of the program.
 There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on an annual basis and effort towards that schedule of activities is tracked through an agile process.
 
-The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
-The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
+The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.
+The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.
 Teams record their day to day work in \gls{JIRA} and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
 
 This framework allows the multidisciplinary Rubin teams to operate the facility and generate nightly data products while continuously improving efficiency of workflows,
 as well as iteratively responding to user community feedback on a longer timescale to maximize the scientific benefit of annual data releases.
-Examples include optimizing the observing strategy as the survey progresses, improving algorithms in response to the user community feedback, 
+Examples include optimizing the observing strategy as the survey progresses, improving algorithms in response to the user community feedback,
 and other incremental work needed to produce the annual data releases.
 
 In this document, we lay out the procedural details for how we define and carry out annual plans, effectively track work progress to ensure delivery of milestones, maintain visibility in our workflows, remain responsive to change, and offer staff the ability to innovate and collaborate.
 
 
+% ======================================================================
 \section{Organizational Structure}
 \label{sec:structure}
-
 
 \subsection{Rubin Operations Leadership}
 \label{sec:contacts}
@@ -149,6 +150,7 @@ Technical staff in Chile at the summit facility may spend a much more significan
 As an example, a first-order estimate is that developers will spent 30\% of their time on \gls{LOE} type activities, and the remaining 70\% of their effort is planned and tracked against well-defined deliverables.
 
 
+% ======================================================================
 \section{Estimating Effort}
 \label{sec:effort}
 
@@ -163,16 +165,16 @@ In general, staff in Rubin Operations roles at a given expected full-time equiva
 
 Staff in ``scientist'' or ``engineer'' roles can allocate up to 2\% of their time to training, 2\% to administrative activities and 1\% to outreach and DEI activities.
 % I have heard it said that staff has up to 3% for Outreach and DEI but I don't know how that resolves to the budget numbers described in the previous sentence
-% Perhaps we just roll it all up into 5%, but it's a good place to reiterate that staff *are expected* to spend time on DEI 
+% Perhaps we just roll it all up into 5%, but it's a good place to reiterate that staff *are expected* to spend time on DEI
 
 Staff in ``scientist'' roles are expected to spend 20\% of their time on personal research (see the Rubin Operations Plan for details).
 That is, scientists are expected to devote 1,440 hours per
 year to operations activity, and the remainder of their time to personal research.
-% Some scientists are 50% 
+% Some scientists are 50%
 
 % Confirmation on how we will be having staff charge for ES/RSS budgeted time in FY22 will be needed.  One suggestion is to not worry about this until FY23 when staff are contributing more than 50% of their time to NOIRLab.
-Personal research time is charged to a NOIRLab's Research and Science Services (RSS) project code and is prorated for staff who are fractionally allocated to Rubin Operations. 
-Training, administrative, and outreach and DEI time is charged to either RSS or ES depending on where staff will move into NOIRLab (RSS or ES). 
+Personal research time is charged to a NOIRLab's Research and Science Services (RSS) project code and is prorated for staff who are fractionally allocated to Rubin Operations.
+Training, administrative, and outreach and DEI time is charged to either RSS or ES depending on where staff will move into NOIRLab (RSS or ES).
 Functional Managers will ensure the proper project codes are available on your timecard.
 
 Rubin expects to pay the full rate for any scientist or engineer who contributes full-time or fractionally to operations.
@@ -225,12 +227,14 @@ Individuals in leadership roles may find it necessary to assign a larger fractio
 The ratio of hours to \glspl{SP} remains constant, but the number of hours decreases.
 
 
-% should be explain the "annual planning" process here and emphasize what the Agencies (NSF/NOIRLab) are asking us to report?  Milestones, Milestone Activities, Deliverables.  I could imagine have a brief section describing annual planning, a section on progress tracking, a section on reporting.  We should also comment on the difference between the DOE and NSF side regarding FWP and annual planning timing.  It works in our favor, but we could summarize that in the way Phil did in his JODR presentation.
-\section{Long Term Planning}
+% ======================================================================
+% Should we explain the "annual planning" process here and emphasize what the Agencies (NSF/NOIRLab) are asking us to report?  Milestones, Milestone Activities, Deliverables.  I could imagine have a brief section describing annual planning, a section on progress tracking, a section on reporting.  We should also comment on the difference between the DOE and NSF side regarding FWP and annual planning timing.  It works in our favor, but we could summarize that in the way Phil did in his 2022 JODR presentation.
+
+
+% ======================================================================
+\section{Long Term Work Planning}
 \label{sec:long-term-plan}
 
-\subsection{Components of Annual Planning}
-\label{sec:annual-planning}
 The authoritative, high-level summary of the long-term planning system may be found in any POP process document.
 
 Here we expand upon the details of that system.
@@ -260,7 +264,7 @@ Some Level 2 milestones {\it may} be reported to the agencies as defined by the 
 \end{description}
 
 Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is important that these be delivered on time and to specification.
-Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue. Note the change control process is under development as a Pre-Operations activity. 
+Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue. Note the change control process is under development as a Pre-Operations activity.
 
 Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is important: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
 
@@ -270,7 +274,7 @@ It should then be assigned to the appropriate \glspl{cycle}.
 
 Progress is tracked toward achieving milestones in Smartsheet by monitoring completed story points on linked issues in \gls{JIRA} epics and rolling up the total progress.
 To ensure success, \gls{JIRA} epics must be completely detailed out prior to a full 6-month cycle and total effort should be estimated out for an entire fiscal year of effort, as detailed below.
-All milestones should appear in \gls{JIRA} with a milestone issue type as the source of truth. 
+All milestones should appear in \gls{JIRA} with a milestone issue type as the source of truth.
 
 \subsection{Planning Research Work}
 \label{sec:long-term-research}
@@ -326,7 +330,8 @@ The Program Coordinators will ensure that the milestones that have been defined 
 % Should we describe the difference between Planning and Tracking sheets here?
 
 
-\section{Short Term Planning} \label{sec:cycle-plan}
+% ======================================================================
+\section{Short Term Work Planning} \label{sec:cycle-plan}
 
 Short term planning is carried out in blocks referred to as \glspl{cycle}, which (usually) last for six months.
 Before the start of a \gls{cycle}, milestones are confirmed by the Director's Office, listed in Smartsheet, and detailed in the Milestone issue. Any team member can find the milestones in \gls{JIRA}.
@@ -433,6 +438,8 @@ Obviously, this will impact the labor available for other activities in the next
 
 Be aware that if a planned epic is not closed it may impact the completion of the milestone it contributes to.  Epics related to milesteones must be completed in order for the milestone to also be completed.
 
+
+% ======================================================================
 \section{Execution} \label{sec:execution}
 
 Having defined the plan for a \gls{cycle} following \S\ref{sec:cycle-plan}, we (RDP and RPF) execute it by means of a series of month-long sprints.
@@ -472,7 +479,7 @@ Every epic should contain \emph{at least} one story.
 Note that there is no relationship enforced between the \gls{SP} total estimated for the \gls{epic} and the sum of the \glspl{SP} of its constituent stories.
 It is therefore possible to over- or under-load an \gls{epic}.
 This will have obvious ramifications for the schedule.
-After execution is complete, comparing the total number of SP on planned stories in an epic to the number of SP on the epic itself affords the opportunity to refine time estimates going forward. 
+After execution is complete, comparing the total number of SP on planned stories in an epic to the number of SP on the epic itself affords the opportunity to refine time estimates going forward.
 
 %\subsection{Handling Bugs \& Emergent Work}
 %label{sec:bugs}
@@ -621,9 +628,10 @@ Where tickets describe bugs or other urgent emergent work which cannot be deferr
 \subsection{Coordination Standup}
 \label{sec:sup}
 
+
+% ======================================================================
 \section{Tracking Progress and Standard Reporting Cycle}
 \label{sec:reporting-cycle}
- Cathy ?
 
 \subsection{Tracking Progress toward Milestones}
 \label{sec:track-progress}
@@ -641,6 +649,7 @@ NOIRLab reports will flow quarterly (or monthly) to the NSF.
 Rubin will show progress on all L1 milestones and any L2 milestones called out in the POP.
 
 
+% ======================================================================
 \section{Personnel}
 
 \subsection{Staffing Changes}
@@ -660,9 +669,13 @@ The responsible hirere must also complete an \href{https://project.lsst.org/onbo
 When members of staff team leave the project, the \gls{T/CAM} should fill in an \href{https://project.lsst.org/onboarding/offboarding_form}{offboarding form}.
 
 
+% ======================================================================
 \section{Open issues}
 
 \begin{itemize}
 \item Kanban for \gls{LOE} operations work
 \item Need section on more procedural driven work on mountain and DF.
 \end{itemize}
+
+
+% ======================================================================
