Notes on needed text updates

--- a/body.tex
+++ b/body.tex
@@ -648,6 +648,42 @@ High level milestone progress will be reported to SLAC and NOIRLab regularly.
 NOIRLab reports will flow quarterly (or monthly) to the NSF.
 Rubin will show progress on all L1 milestones and any L2 milestones called out in the POP.
 
+% ======================================================================
+\section{Annual Budget Planning}
+
+Preamble. Budget requests. Spending plan development.
+
+Annual cycle, two different funding sources and budget request mechanisms. 5-year proposal and FWP.
+Director's Office sets major milestones and issues departmental budget guidance, by end of April.
+Departments and Teams set minor milestones, scrub budget to propose spending plan by end of May.
+Director's Office adjusts and finalizes spending plan by end of June, for NOIRLab POP and DOE budget briefing.
+Statements of work for next-year contracts and MPOs due July.
+Teams then plan work against their milestones in September after collecting community input at PCW in August.
+
+Annual cycle illustration.
+
+Notes on major milestone setting and budget guidance development. Timing relative to annual JOR.
+
+Notes on scrub design.
+Suggestions re: remote vs in person.
+Early May pre-scrub within department to design activities and set L3 milestones in response to L2 milestones.
+Late May/early June scrub presentations to Director's Office, proposing changes in effort distribution, staffing, purchasing, risk analysis.
+Small deviations from budget guidance.
+Post-scrub spending plan development and cost calculation in RDO during June: this means updates to the planning tools (Appendix~\ref{sec:planning-tools}).
+Implement changes in lab budget models in July.
+
+Financial Reserves.
+Preamble on motivation.
+Management reserve for unknown unknowns, contingency reserve for known unknowns (in the risk regsiter).
+Different guidelines from different agencies. DOE allows reserves to be built up and carried forward at SLAC, and used as both contingency and management reserve. DOE holds additional mgmt reserve centrally.
+NSF allows line item budget over-estimates, which then also lead to carry-forward, which we then use as contingency reserve; NSF-side management reserve is held at the agency.
+Risk-aware budgeting: cost impact analysis of Risk register informs level of contingency reserve needed.
+Additional 8\% management reserve at SLAC, often needed to bridge gaps in federal funding. Reserve maintenance is accounted for in DOE budget requests.
+Status of reserve planning and risk analysis.
+
+Requests Beyond Target
+Mid-year. Typically to mitigate or address risks. Leads to draw on reserves. Process for evaluating.
+ 
 
 % ======================================================================
 \section{Personnel}
