--- a/planning-tools.tex
+++ b/planning-tools.tex
@@ -1,2 +1,14 @@
 \section{Rubin Operations Planning Tools}
 \label{sec:planning-tools}
+
+Logical flow: WBS activities -> Labor and Nonlabor plans -> Staffing Plan. Staffing informs costing with Staff Data. Cost Calculator costs the plan.
+
+Tool design. Must be: collaborative/shareable, easy to use. Custom, inter-connected Google sheets workbooks.
+
+WBS notes.
+
+Staffing Plan notes.
+
+Cost Calculator notes.
+
+Updating and Versioning
