Anticipate Cathy's FY23 updates

--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -17,7 +17,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-Phil Marshall, William O'Mullane, Amanda Bauer, Robert Blum, Cathy Petry, Ranpal Gill
+William O'Mullane, Amanda Bauer, Robert Blum, Phil Marshall, Cathy Petry, Ranpal Gill
 }
 
 \setDocRef{RTN-005}
@@ -41,7 +41,7 @@ This document describes how effort towards an annually-planned schedule is track
 % See LPM-51 for version number policy.
 \setDocChangeRecord{%
 \addtohist{1}{2021-11-05}{Initial version.}{William O'Mullane}
-\addtohist{1}{2023-01-13}{Extension to include budget planning.}{Phil Marshall}
+\addtohist{1}{2023-01-13}{Extension to include budget planning, FY23 process updates.}{Phil Marshall \& Cathy Petry}
 }
 
 
