Minimal edit to start branch

--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -29,7 +29,7 @@ William O'Mullane, Amanda Bauer, Robert Blum, Phil Marshall, Cathy Petry
 % \setDocCurator{The Curator of this Document}
 
 \setDocAbstract{%
-This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity. This document describes how effort towards an annually-planned schedule is tracked. 
+This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity. This document describes how effort towards an annually-planned schedule is tracked.
 }
 
 % Change history defined here.
@@ -38,7 +38,7 @@ This document describes guidelines for the management of effort in Vera C. Rubin
 % See LPM-51 for version number policy.
 \setDocChangeRecord{%
 \addtohist{1}{2021-11-05}{Unreleased.}{William O'Mullane}
-  % \addtohist{1}{YYYY-MM-DD}{Initial Release.}{William O'Mullane}
+\addtohist{2}{2023-01-13}{Updated with FY23 processes.}{Cathy Petry}
 }
 
 
