--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -29,7 +29,7 @@ William O'Mullane, Amanda Bauer, Robert Blum, Phil Marshall, Cathy Petry
 % \setDocCurator{The Curator of this Document}
 
 \setDocAbstract{%
-This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity. This document describes how effort towards an annually-planned schedule is tracked.
+This document describes guidelines for the management of effort in Vera C. Rubin Observatory Operations. It describes the process for planning and executing agile-based work, including tasks that are carried out with regularity (nightly or monthly, etc), long-term development work that iteratively incorporates user feedback, and level of effort activity. The process for how measuring progress towards an annually-planned schedule is described. The budget planning cycle and the tools used in this process are described.
 }
 
 % Change history defined here.
