--- a/body.tex
+++ b/body.tex
@@ -2,10 +2,10 @@
 
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal RDO-018 for a description of the full scope and high level goals of the program.
-There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on an annual basis and effort towards that schedule of activities is tracked through an agile process.
+There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on a semi-annual basis and effort towards that schedule of activities is tracked through an agile process.
 
 The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
-The Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
+In a six-month cycle, the Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
 Teams record their day to day work in \gls{JIRA} and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
 
 This framework allows the multidisciplinary Rubin teams to operate the facility and generate nightly data products while continuously improving efficiency of workflows,
