--- a/body.tex
+++ b/body.tex
@@ -24,7 +24,7 @@ In this document, we lay out the procedural details for how we define and carry 
 \label{sec:contacts}
 
 Rubin Observatory is a Program of NSF's NOIRLab.
-The Rubin Observatory \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is Amanda Bauer, and the Deputy \gls{Director} for SLAC is Phil Marshall.
+The Rubin Observatory \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is currently under recruitment, and the Deputy \gls{Director} for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO Operations.
 
 The Head of Operations is Ranpal Gill and the Program Coordinator is Cathy Petry.
@@ -39,7 +39,7 @@ Each operational Department is led by an Associate Director (AD).
 \subsection{Annual Reporting}
 \label{sec:reporting}
 
-The POP is a defined report and process for NOIRLab.
+The POP is a defined process for NOIRLab, where annually the next fiscal year's POP is developed and reporting on progress of the current year's POP to the NSF is done quarterly with a final annual progress report.
 Rubin Operations considers the POP to be a Rubin activity, which informs both NOIRLab and SLAC leadership of the annual Rubin activity including milestones and budget.
 For NOIRLab, the Rubin POP is integrated and delivered to NSF for the next fiscal year at the end of the current fiscal year.
 For SLAC, the POP informs SLAC's annual planning, which culminates in a Field Work Proposal (FWP) for all SLAC High Energy Physics activity including Rubin.
