--- a/body.tex
+++ b/body.tex
@@ -75,46 +75,47 @@ L2 \gls{WBS} & L3 \gls{WBS} & Description \tabularnewline
 \endhead
 
 1 & & Rubin Director's Office  \tabularnewline
-  & 1.1 & Director's Office  \tabularnewline
-  & 1.2 & Safety  \tabularnewline
-  & 1.3 & Program Operations\footnotemark[1]  \tabularnewline
+  & 1.1 & \hspace{0.5cm} Director's Office  \tabularnewline
+  & 1.2 & \hspace{0.5cm} Safety  \tabularnewline
+  & 1.3 & \hspace{0.5cm} Program Operations\footnotemark[1]  \tabularnewline
 %  & 1.3.1 & Program Operations  \tabularnewline
 %  & 1.3.2 & Administrative Operations  \tabularnewline
 %  & 1.3.3 & Portfolio Management  \tabularnewline
 %  & 1.3.4 & Communications  \tabularnewline
 %  & 1.3.5 & Document Management  \tabularnewline
 %  & 1.3.6 & 5-Year Planning  \tabularnewline
-  & 1.4 & In-Kind Program Coordination  \tabularnewline
-  & 1.8 & Legacy Survey of Space and Time  \tabularnewline
-  & 1.10 & Sustainability  \tabularnewline
-  & 1.11 & Site Protection  \tabularnewline
+  & 1.4 & \hspace{0.5cm} In-Kind Program Coordination  \tabularnewline
+  & 1.8 & \hspace{0.5cm} Legacy Survey of Space and Time  \tabularnewline
+  & 1.10 & \hspace{0.5cm} Sustainability  \tabularnewline
+  & 1.11 & \hspace{0.5cm} Site Protection  \tabularnewline
+  & 1.12 & \hspace{0.5cm} Rubin Site Protection  \tabularnewline
 2 & & Rubin Observatory Operations  \tabularnewline
-  & 2.1 & Observatory Operations Management  \tabularnewline
-  & 2.2 & Observatory Science Operations  \tabularnewline
-  & 2.3 & Observatory Software  \tabularnewline
-  & 2.4 & Summit Operations  \tabularnewline
-  & 2.5 & Nighttime Operations  \tabularnewline
-  & 2.6 & Engineering  \tabularnewline
+  & 2.1 & \hspace{0.5cm} Observatory Operations Management  \tabularnewline
+  & 2.2 & \hspace{0.5cm} Observatory Science Operations  \tabularnewline
+  & 2.3 & \hspace{0.5cm} Observatory Software  \tabularnewline
+  & 2.4 & \hspace{0.5cm} Summit Operations  \tabularnewline
+  & 2.5 & \hspace{0.5cm} Nighttime Operations  \tabularnewline
+  & 2.6 & \hspace{0.5cm} Engineering  \tabularnewline
 3 & & Rubin Data Production \tabularnewline
-  & 3.1 & Data Production Management  \tabularnewline
-  & 3.2 & Infrastructure and Support  \tabularnewline
-  & 3.3 & Data and Processing Architecture  \tabularnewline
+  & 3.1 & \hspace{0.5cm} Data Production Management  \tabularnewline
+  & 3.2 & \hspace{0.5cm} Infrastructure and Support  \tabularnewline
+  & 3.3 & \hspace{0.5cm} Data and Processing Architecture  \tabularnewline
 %   & 3.4 & Execution (disabled)  \tabularnewline
-  & 3.5 & Algorithms and Pipelines  \tabularnewline
-  & 3.6 & Service Quality and Reliability Engineering  \tabularnewline
-  & 3.7 & DevOps Support  \tabularnewline
-  & 3.8 & Data Security  \tabularnewline
+  & 3.5 & \hspace{0.5cm} Algorithms and Pipelines  \tabularnewline
+  & 3.6 & \hspace{0.5cm} Service Quality and Reliability Engineering  \tabularnewline
+  & 3.7 & \hspace{0.5cm} DevOps Support  \tabularnewline
+  & 3.8 & \hspace{0.5cm} Data Security  \tabularnewline
 4 & & Rubin System Performance  \tabularnewline
-  & 4.1 & System Performance Management  \tabularnewline
-  & 4.2 & Verification and Validation  \tabularnewline
-  & 4.3 & Community Engagement  \tabularnewline
-  & 4.4 & Survey Scheduling  \tabularnewline
-  & 4.5 & Systems Engineering  \tabularnewline
+  & 4.1 & \hspace{0.5cm} System Performance Management  \tabularnewline
+  & 4.2 & \hspace{0.5cm} Verification and Validation  \tabularnewline
+  & 4.3 & \hspace{0.5cm} Community Engagement  \tabularnewline
+  & 4.4 & \hspace{0.5cm} Survey Scheduling  \tabularnewline
+  & 4.5 & \hspace{0.5cm} Systems Engineering  \tabularnewline
 5 & & Rubin Education and Public Outreach \tabularnewline
-  & 5.1 & EPO Management  \tabularnewline
-  & 5.2 & EPO Technical  \tabularnewline
-  & 5.3 & Education  \tabularnewline
-  & 5.4 & Outreach  \tabularnewline
+  & 5.1 & \hspace{0.5cm} EPO Management  \tabularnewline
+  & 5.2 & \hspace{0.5cm} EPO Technical  \tabularnewline
+  & 5.3 & \hspace{0.5cm} Education  \tabularnewline
+  & 5.4 & \hspace{0.5cm} Outreach  \tabularnewline
 
 \hline
 
