--- a/body.tex
+++ b/body.tex
@@ -156,6 +156,7 @@ As an example, a first-order estimate is that developers will spent 30\% of thei
 \subsection{Basic Assumptions}
 
 % Note: These calculations are true for Construction but need to be updated for Rubin Operations since NOIRLab uses 1744 hours per year (83%) for scientists, scientists could have 20% or 50% for research, and research time and Training, Admin & DEI time is charged to RSS.  For Engineers, Training, Admin & DEI time is charged to ES.
+% We could also refer to the effort planning tool Phil has made ("Team Effort Planner" in Staffing Plan).  Right now, most people have "Commenter" permission in the STaffing Plan workbook and this is not sufficient to use the dropdown filter that TLs and ADs would need to use this tool.  We could move this to a stand-alone workbook.
 
 Rubin Operations assumes that a full-time individual works for a total of 1,800 hours per year: this figure is \emph{after} all vacations, sick leave, etc are taken into account.
 The Rubin Operations partners, SLAC and NOIRLab, may have different definitions for tracking their staff time; Rubin Operations uses 1,800 hours per year as a fiducial value for effort estimation purposes.
