--- a/body.tex
+++ b/body.tex
@@ -231,6 +231,61 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
 \section{Long Term Planning}
 \label{sec:long-term-plan}
 
+\subsection{Timeline for Annual Planning}
+\label{sec:annual-planning-timeline}
+
+% This might be a good place to discuss the linked timing of milestone development and budget scrubbing which I have a draft timeline here
+\begin{itemize}
+\item January
+   \begin{itemize}
+      \item Update budget tools with any major changes for NICRA proposal (Will have already updated RAS from Staffing Plan and Nonlabor for quarterly forecasting) in December
+   \end{itemize}
+\item March
+   \begin{itemize}
+      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
+      \item Update Nonlabor for quarterly forecasting
+      \item Semi-annual process of planning epics and L3s for next six months
+      \item Good time for “Budget Scrub” in preparation for POP (how long does this take?) 
+   \end{itemize}
+\item Mid-April-End of May: POP process kicks off mid-April with good drafts of milestones and budget due end of May
+    \begin{itemize}
+       \item Next FY Milestone Review
+          \begin{itemize}
+             \item Have ADs review and/or add/edit in Confluence or a google sheet (Having them interact with Smartsheet was not effective)
+             \item Possibly hold a workshop or meetings with ADs individually to review their milestones
+             \item Enter in Smartsheet for impact analysis (schedule)
+             \item Discuss at Ops-Exec; approval (of Smartsheet plan) given and recorded by Bob/Phil
+             \item Import all changes into Jira as approved in Smartsheet
+          \end{itemize}
+      \item Complete “Budget Scrub”
+     \end{itemize}
+\item June 
+   \begin{itemize}
+      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
+      \item Update Nonlabor for quarterly forecasting
+      \item Final Labor and Nonlabor budget for POP	
+   \end{itemize}
+\item September
+   \begin{itemize}
+      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
+      \item Update Nonlabor for quarterly forecasting
+      \item Semi-annual process of planning epics and L3s for next six months
+      \item Planning for 2nd half may trigger L1-L2 milestone changes needed in next FY
+      \begin{itemize}
+         \item Collect requests in a google sheet or confluence page
+         \item Enter in feasibility study in Smartsheet for impact analysis
+         \item Discuss at Ops-Exec; approval (of Smartsheet plan) given and recorded by Bob/Phil
+         \item Import all changes into Jira as approved in Smartsheet
+      \end{itemize}
+   \end{itemize}
+\item December
+   \begin{itemize}
+      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
+      \item Update Nonlabor for quarterly forecasting
+      \item Nonlabor changes needed for NICRA
+   \end{itemize}
+\end{itemize}
+
 \subsection{Components of Annual Planning}
 \label{sec:annual-planning}
 The authoritative, high-level summary of the long-term planning system may be found in any POP process document.
