--- a/body.tex
+++ b/body.tex
@@ -291,7 +291,7 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
 The authoritative, high-level summary of the long-term planning system may be found in any POP process document.
 
 Here we expand upon the details of that system.
-The plan for Pre-Operations and Survey Operations is embodied in:
+The plan for Pre-Operations and Full Survey Operations is embodied in:
 
 \begin{enumerate}
     \item A set of \emph{milestones}, each of which represents the delivery of a major aspect of Rubin Operations, availability of specific functionality, or maintenance event for the telescope system.
@@ -308,7 +308,7 @@ Milestones are allocated to one of three levels, defined as follows:
 \item[Level 1] These are at the full observatory level and are owned by the Directors Office.
 Examples are the completion of a Data Preview, the beginning of nightly observations for the full survey, or the delivery of an annual Data Release.
 Level 1 milestones are achieved by the culmination of effort defined by a set of Level 2 and Level 3 milestones.
-Level 1 milestones are reported to the agencies.
+Level 1 milestones {\it may} be reported to the agencies as defined by the annual POP .
 \item[Level 2] These reflect effort within a Department and are owned by an Associate Director, or are cross-Department commitments.
 As such, they must be defined in consultation with the Director's Office.
 Level 2 milestones are achieved by the culmination of effort defined by a set of Level 3 milestones.
@@ -316,7 +316,7 @@ Some Level 2 milestones {\it may} be reported to the agencies as defined by the 
 \item[Level 3] These are internal to a particular Department and assigned to a team and can therefore be specified by a single team lead.
 \end{description}
 
-Some of these milestones are exposed to external reviewers (usually reserved for Level 1 milestones): it is important that these be delivered on time and to specification.
+Some of these milestones are exposed to external reviewers; it is important that these be delivered on time and to specification.
 Level 1 and 2 milestones are under change control once they are defined and described in a \gls{JIRA} Milestone issue. Note the change control process is under development as a Pre-Operations activity. 
 
 Level 3 milestones are defined for use within Departments and not required to go under project change control, but properly adhering to the plan is important: your colleagues in other teams will use these milestones to align their schedules with yours, so they rely on you to be accurate.
